Privacy Policy for Turbo Madness added

--- a/Turbo-Madness-0000008.html
+++ b/Turbo-Madness-0000008.html
@@ -116,6 +116,7 @@
 									<ul class="stats">
 										<li><a href="https://www.java.com/de/" target="_blank">Java</a></li>
 										<li><a href="https://libgdx.com/" target="_blank">libGDX</a></li>
+										<li><a href="Turbo-Madness-Privacy-Policy.html" target="_blank">Privacy Policy</a></li>
 									</ul>
 								</footer>
 							</article>
