- Fixed formatting - SEO improvements - Updated avatar

--- a/About-me.html
+++ b/About-me.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/avatar.jpg">
+		<link rel="icon" href="images/avatar.png">
 	</head>
 	<body class="single is-preload">
 
@@ -87,7 +87,7 @@
 									</div>
 									<div class="meta">
 										<time class="published">About me</time>
-										<a href="About-me.html" class="author"><span class="name">Roman Wecker</span><img src="images/avatar.jpg" alt="" /></a>
+										<a href="About-me.html" class="author"><span class="name">Roman Wecker</span><img src="images/avatar.png" alt="" /></a>
 									</div>
 								</header>
 
@@ -95,7 +95,7 @@
                   <div class="box alt">
 										<div class="row gtr-uniform">
                       <div class="col-12">
-                        <p><span class="image left"><img src="images/avatar.jpg" alt="" /></span><h2>Nice to meet you.</h2>I have a great passion for game development. Topics I am particularly interested in are <b>level design</b>, <b>procedural generation</b>, <b>computer graphics</b> and programming <b>gameplay mechanics</b>. I have already worked on a mapping project for Red Bull and helped maintain the Nintendo website. In the last few years I have worked on countless projects and have already published an app on the Google Play Store. The projects I present here are only a small part of my work, but also the ones I am most proud of.</p>
+                        <p><span class="image left"><img src="images/avatar.png" alt="" /></span><h2>Nice to meet you.</h2>I have a great passion for game development. Topics I am particularly interested in are <b>level design</b>, <b>procedural generation</b>, <b>computer graphics</b> and programming <b>gameplay mechanics</b>. I have already worked on a mapping project for Red Bull and helped maintain the Nintendo website. In the last few years I have worked on countless projects and have already published an app on the Google Play Store. The projects I present here are only a small part of my work, but also the ones I am most proud of.</p>
                         <a href="Contact.html" class="button">Contact me</a>
                       </div>
                     </div>
