--- a/Tomb-Raider-1-Fan-Remake-0000002.html
+++ b/Tomb-Raider-1-Fan-Remake-0000002.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/avatar.jpg">
+		<link rel="icon" href="images/avatar.png">
 	</head>
 	<body class="single is-preload">
 
@@ -87,7 +87,7 @@
 									</div>
 									<div class="meta">
 										<time class="published">Project #2</time>
-										<a href="About-me.html" class="author"><span class="name">Roman Wecker</span><img src="images/avatar.jpg" alt="" /></a>
+										<a href="About-me.html" class="author"><span class="name">Roman Wecker</span><img src="images/avatar.png" alt="" /></a>
 									</div>
 								</header>
 
