--- a/Turbo-Madness-Privacy-Policy.html
+++ b/Turbo-Madness-Privacy-Policy.html
@@ -9,8 +9,9 @@
 		<title>Portfolio - Roman Wecker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="robots" content="noindex">
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/avatar.jpg">
+		<link rel="icon" href="images/avatar.png">
 	</head>
 	<body class="single is-preload">
 
