Added and updated privacy policies

--- a/Turbo-Madness-Privacy-Policy.html
+++ b/Turbo-Madness-Privacy-Policy.html
@@ -93,7 +93,7 @@
 
 										<h3>PRIVACY POLICY</h3><br>
 										<p>
-											Effective Date: April 24th, 2022<br>
+											Effective Date: November 14th, 2023<br>
 											<br>
 											Thank you for playing our games! This Privacy Policy describes:
 											<ul>
@@ -101,7 +101,7 @@
 												<li>How we use your personal data, and</li>
 												<li>The choices you have about your personal data.</li>
 											</ul>
-											This Privacy Policy applies to Turbo Madness Racing, store, sites and related services, which we here collectively call the Service. We may periodically update this Privacy Policy by posting a new version on r-studios.github.io. If we make any material changes, we will notify you as required under applicable law, including by posting a notice in the Service prior to the change becoming effective. Your continued use of the Service after the effective date will be subject to the new Privacy Policy.
+											This Privacy Policy applies to Turbo Madness Racing, store, sites and related services, which we here collectively call the Service. We may periodically update this Privacy Policy by posting a new version on <a href="https://r-studios.github.io/" target="_blank">r-studios.github.io</a>. If we make any material changes, we will notify you as required under applicable law, including by posting a notice in the Service prior to the change becoming effective. Your continued use of the Service after the effective date will be subject to the new Privacy Policy.
 										</p>
 										<hr />
 
@@ -111,7 +111,7 @@
 											<br>
 											<p>
 												Name: R-Studios (Roman Wecker)<br>
-												Address: Brennergasse 10, 87435 Kempten, Germany<br>
+												Address: Hedderichstraße 47b, 60594 Frankfurt am Main, Germany<br>
 												Attn: Privacy<br>
 												Email: R-Studios@gmx.de
 											</p>
