Updated privacy policies

--- a/Meat-Grinder-HD-Privacy-Policy.html
+++ b/Meat-Grinder-HD-Privacy-Policy.html
@@ -92,7 +92,7 @@
 										
 										<h3>Privacy Policy</h3><br>
 										<p>
-											Effective Date: November 14th, 2023</br>
+											Effective Date: June 3rd, 2024</br>
 											Thank you for playing our games! This Privacy Policy describes:</br>
 											<ul>
 												<li>The ways we collect personal data about you and why we do so</li>
@@ -109,7 +109,7 @@
 											<br>
 											<p>
 												Name: R-Studios (Roman Wecker)<br>
-												Address: Hedderichstraße 47b, 60594 Frankfurt am Main, Germany<br>
+												Address: Güntherstr. 43, 60528 Frankfurt am Main, Germany<br>
 												Attn: Privacy<br>
 												Email: R-Studios@gmx.de
 											</p>
