--- a/Turbo-Madness-Privacy-Policy.html
+++ b/Turbo-Madness-Privacy-Policy.html
@@ -93,7 +93,7 @@
 
 										<h3>PRIVACY POLICY</h3><br>
 										<p>
-											Effective Date: November 14th, 2023<br>
+											Effective Date: June 3rd, 2024<br>
 											<br>
 											Thank you for playing our games! This Privacy Policy describes:
 											<ul>
@@ -111,7 +111,7 @@
 											<br>
 											<p>
 												Name: R-Studios (Roman Wecker)<br>
-												Address: Hedderichstraße 47b, 60594 Frankfurt am Main, Germany<br>
+												Address: Güntherstr. 43, 60528 Frankfurt am Main, Germany<br>
 												Attn: Privacy<br>
 												Email: R-Studios@gmx.de
 											</p>
