Update LinkedIn handle

--- a/reference.html
+++ b/reference.html
@@ -580,7 +580,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         <ul class="icons">
           <li>
             <a
-              href="https://www.linkedin.com/in/roman-wecker/"
+              href="https://www.linkedin.com/in/romanwck/"
               class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
             >
