--- a/Amazon-Price-Tracker-0000009.html
+++ b/Amazon-Price-Tracker-0000009.html
@@ -68,7 +68,7 @@
           <ul class="icons">
             <li>
               <a
-                href="https://www.linkedin.com/in/roman-wecker/"
+                href="https://www.linkedin.com/in/romanwck/"
                 target="_blank"
                 class="icon brands fa-linkedin"
                 ><span class="label">LinkedIn</span></a
@@ -203,7 +203,7 @@
         <ul class="icons">
           <li>
             <a
-              href="https://www.linkedin.com/in/roman-wecker/"
+              href="https://www.linkedin.com/in/romanwck/"
               target="_blank"
               class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
