--- a/Tomb-Raider-1-Fan-Remake-0000002.html
+++ b/Tomb-Raider-1-Fan-Remake-0000002.html
@@ -66,7 +66,7 @@
 						<!-- Footer -->
 							<section id="footer">
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/roman-wecker/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/romanwck/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/R-Studios/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="mailto:Roman.Wecker@gmx.de" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
@@ -120,7 +120,7 @@
 				<!-- Footer -->
 				<section id="footer">
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/roman-wecker/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/romanwck/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/R-Studios/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto:Roman.Wecker@gmx.de" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
